gateway/redis-2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-instance-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
      instance: "2"
  template:
    metadata:
      labels:
        app: redis
        instance: "2"
    spec:
      containers:
        - name: redis
          image: redis
          ports:
            - containerPort: 6379

---

apiVersion: v1
kind: Service
metadata:
  name: redis-service-2
spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: redis
    instance: "2"
